# string_conditions

./: .coveragerc  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: python-package.yml  python-publish.yml
string_conditions/: __init__.py  __main__.py  errors.py  visitor.py
string_conditions/tests/: test_condition.py
